--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,37 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#main {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+}
+
+#sidebar {
+  width: 30%;
+  height: 100%;
+  border-right: 0.1rem solid black;
+}
+
+#sidebarheader {
+  border-bottom: 0.1rem solid black;
+}
+
+#sidebarheader p{
+  display: flex;
+  flex-direction: column;
+  font-size: 25px;
+  margin-top: 10px;
+  margin-left: 5px;
+}
+
+#sidebarheader p a{
+  cursor: pointer;
+  font-size: 12px;
+  width: 0;
 }
