--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,20 @@
   display: flex;
 }
 
+.loading-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 10;
+}
+
+
 #sidebar {
   width: 30%;
   height: 100%;
