button loading screen (temp)

--- a/src/Loginsignup/Loginsignup.css
+++ b/src/Loginsignup/Loginsignup.css
@@ -57,6 +57,8 @@
 }
 
 #signin-form button[type="submit"] {
+  width: 300px;
+  height: 38px;
   background-color: #4caf50;
   color: white;
   padding: 0.6rem;
