--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,9 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  color-scheme: dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: rgba(0, 0, 0, 0.9);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -28,6 +28,9 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  background-color: rgba(0, 0, 0, 0.9);
+  color: white;
+  font-family: sans-serif;
 }
 
 h1 {
