--- a/src/App.css
+++ b/src/App.css
@@ -25,15 +25,16 @@
   z-index: 10;
 }
 
-
 #sidebar {
   width: 30%;
   height: 100%;
-  border-right: 0.1rem solid black;
+  border-right: 0.2rem solid black;
 }
 
 #sidebarheader {
-  border-bottom: 0.1rem solid black;
+  display: flex;
+  flex-direction: row;
+  border-bottom: 0.2rem solid black;
 }
 
 #sidebarheader p{
@@ -48,4 +49,17 @@
   cursor: pointer;
   font-size: 12px;
   width: 0;
+}
+
+#addbutton {
+  all: unset;
+  margin-left: auto;
+  margin-right: 20px;
+  cursor: pointer;
+  scale: 0.8;
+  transition: transform 0.2s ease-in-out;
+}
+
+#addbutton:hover {
+  transform: scale(1.1);
 }
