--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: rgba(0, 0, 0, 0.9);
+  color: rgb(237,39,136);
+  background-color: rgba(15,71,159);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,7 +14,7 @@
 
 a {
   font-weight: 500;
-  color: #646cff;
+  color: rgb(32,6,45);
   text-decoration: inherit;
 }
 a:hover {
@@ -28,8 +27,8 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
-  background-color: rgba(0, 0, 0, 0.9);
-  color: white;
+  background-color: rgb(15,71,159);
+  color: rgb(237,39,136);
   font-family: sans-serif;
 }
 
