--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,11 @@
   background-color: #0a1e46;
 }
 
+#main-container {
+  display: flex;
+  height: 100vh;
+}
+
 #main {
   height: 100vh;
   width: 100vw;
@@ -233,4 +238,52 @@
 
 .chat-status-circle.offline {
   background-color: #027e36;
+}
+
+
+
+.chat-window {
+  flex-grow: 1;
+  background: #0a1e46;
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+.chat-header {
+  background: #142c5c;
+  padding: 12px;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid #ed2788;
+}
+
+.chat-body {
+  flex: 1;
+  padding: 16px;
+  overflow-y: auto;
+}
+
+.chat-footer {
+  display: flex;
+  padding: 12px;
+  background: #142c5c;
+  border-top: 1px solid #ed2788;
+}
+
+.chat-footer input {
+  flex: 1;
+  padding: 8px;
+  border-radius: 4px;
+  border: none;
+  margin-right: 8px;
+}
+
+.chat-footer button {
+  background: #ed2788;
+  color: white;
+  border: none;
+  padding: 8px 12px;
+  border-radius: 4px;
+  cursor: pointer;
 }
